chore: template docs
